--- a/templates/traveling/index.html
+++ b/templates/traveling/index.html
@@ -7,7 +7,7 @@
     <table class="table">
         <thead>
             <tr class=" text-center thead-dark">
-                <th><a href="{% url 'common:login' %}">Meet US!!</a></th>
+                <th><a href="{% url 'traveling:main' %}">Meet US!!</a></th>
             </tr>
         </thead>
     </table>
