상세페이지

--- a/templates/traveling/result.html
+++ b/templates/traveling/result.html
@@ -11,6 +11,11 @@
     <!-- 결과 파트 
     게시판 형태 이동 -->
 
+    <a href="{% url 'traveling:detail' 200%}">클릭</a>
+
+    
+
+
     <!-- 통계정보 파트 
     그냥 통계 정보 넣기 -->
 
