--- a/templates/traveling/detail.html
+++ b/templates/traveling/detail.html
@@ -7,6 +7,58 @@
         세부페이지
     </div>
 
+    <div class="card-body">
+        
+            <div class="badge badge-light p-2">
+                <h1>{{ content.name }}</h1>
+
+            </div>
+        
+        <div class="card-text" style="white-space: pre-line;">{{ content.address }}</div>
+    </div>
+
+    <img src="{{ content.image | safe }}" width=500 height=500>
+
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;">
+                {% if rsub  %}
+                대표매뉴 : {{ rsub.represent }}
+                {% elif asub %}
+                교통정보 : {{ asub.traffic }}
+
+                휴무일 : {{ asub.break_time}}
+                이용요금 : {{ asub.cost }}
+                편의시설 : {{ asub.amenity }}
+                {% elif fsub %}
+                교통정보 : {{ fsub.traffic }}
+
+                이용요금 : {{ fsub.cost }}
+                편의시설 : {{ fsub.amenity }}
+                {% elif ssub %}
+                교통정보 : {{ ssub.traffic }}
+
+                휴무일 : {{ ssub.break_time}}
+                편의시설 : {{ ssub.amenity }}
+                {% endif %}
+                전화번호 : {{content.call_number}}
+                영업 시간 : {{content.time}}
+                홈페이지 : {{content.url}}
+            </div>
+            
+        </div>
+    </div>
+
+
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;">{{content.detail}}
+            </div>
+            
+        </div>
+    </div>
+
+
     <!-- 세부 검색 결과 넣기 -->
 
 </div>
