--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,23 +1,21 @@
 <!-- 네비게이션바 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <a class="navbar-brand">부산 관광^^</a>
+    <a class="navbar-brand" style="text-align: center;">
+        <h1>부산 관광^^</h1>
+    </a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+    <!-- <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item ">
-                <!-- ------------------------------- [edit] -------------------------------- -->
                 {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
                 {% else %}
-                <!-- ----------------------------------------------------------------------- -->
                 <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
-                <!-- ------------------------------- [edit] -------------------------------- -->
                 {% endif %}
-                <!-- ----------------------------------------------------------------------- -->
             </li>
         </ul>
-    </div>
+    </div> -->
 </nav>
