--- a/templates/traveling/main.html
+++ b/templates/traveling/main.html
@@ -7,27 +7,31 @@
 {% block content %}
 
 <style>
+    select {
+        width: 200px;
+        /* 원하는 너비설정 */
+        padding: .8em .5em;
+        /* 여백으로 높이 설정 */
+        font-family: inherit;
+        /* 폰트 상속 */
+        background: url(https://farm1.staticflickr.com/379/19928272501_4ef877c265_t.jpg) no-repeat 95% 50%;
+        /* 네이티브 화살표 대체 */
+        border: 1px solid #999;
+        border-radius: 0px;
+        /* iOS 둥근모서리 제거 */
+        -webkit-appearance: none;
+        /* 네이티브 외형 감추기 */
+        -moz-appearance: none;
+        appearance: none;
+    }
 
-select { 
-    width: 200px; /* 원하는 너비설정 */ 
-padding: .8em .5em; /* 여백으로 높이 설정 */ 
-font-family: inherit; /* 폰트 상속 */ 
-background: url(https://farm1.staticflickr.com/379/19928272501_4ef877c265_t.jpg) no-repeat 95% 50%; /* 네이티브 화살표 대체 */ 
-border: 1px solid #999; 
-border-radius: 0px; /* iOS 둥근모서리 제거 */ 
--webkit-appearance: none; /* 네이티브 외형 감추기 */ 
--moz-appearance: none; 
-appearance: none; }
-
-.out{
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    margin: 15px;
-}
-
-
-
+    .out {
+        width: 100%;
+        text-align: center;
+        padding: 20px;
+        margin: 15px;
+        vertical-align: middle;
+    }
 </style>
 
 <div>
@@ -49,7 +53,7 @@ appearance: none; }
 </div>
 <div>
     <div class="container">
-        <h5 class="my-3 border-bottom pb-2">검색하기</h5>
+        <h5 class="my-3 border-bottom pb-2" style="text-align: center">메인페이지</h5>
         <form method="GET" class="post-form my-3" action="/traveling/result/">
             {% csrf_token %}
             <!-- 오류표시 Start -->
@@ -66,35 +70,43 @@ appearance: none; }
             <!-- 오류표시 End -->
 
             <div class="out" style="margin-top: 10px;">
-                <div class="in" style="height: 300px;width: 500px;margin: 10px;float:left;justify-content: center;align-items: center;">
-                <select class="selectpicker" name= 'gugun' id= 'gugun'>
-                    <option value="금정구">금정구</option>
-                    <option value="수영구">수영구</option>
-                    <option value="영도구">영도구</option>
-                </select>
-    
-    
-    
-    
-                <select class="selectpicker" name= 'theme' id= 'theme'>
-                    <option value="맛집">맛집</option>
-                    <option value="관광명소">관광명소</option>
-                    <option value="쇼핑">쇼핑</option>
-                    <option value="축제">축제</option>
-                </select>
+                <div class="in" style="align-items: center; vertical-align: middle;">
+                    <!-- height: 300px;width: 500px;margin: 10px;float:left;justify-content: center; -->
+                    <select class="selectpicker" name='gugun' id='gugun'>
+                        <option value="금정구">금정구</option>
+                        <option value="수영구">기장군</option>
+                        <option value="영도구">해운대구</option>
+                        <option value="동래구">동래구</option>
+                        <option value="연제구">연제구</option>
+                        <option value="수영구">수영구</option>
+                        <option value="남구">남구</option>
+                        <option value="동구">동구</option>
+                        <option value="부산진구">부산진구</option>
+                        <option value="북구">북구</option>
+                        <option value="영도구">영도구</option>
+                        <option value="중구">중구</option>
+                        <option value="서구">서구</option>
+                        <option value="사하구">사하구</option>
+                        <option value="사상구">사상구</option>
+                        <option value="강서구">강서구</option>
+                    </select>
 
-                <button type="submit" class="btn btn-primary">검색</button>
+                    <select class="selectpicker" name='theme' id='theme'>
+                        <option value="맛집">맛집</option>
+                        <option value="관광명소">관광명소</option>
+                        <option value="쇼핑">쇼핑</option>
+                        <option value="축제">축제</option>
+                    </select>
+                    <button type="submit" class="btn btn-primary">검색</button>
 
                 </div>
-
-
-                <div style="height: 300px;width: 400px;margin: 10px;float:left;">
+                <!-- <div style="height: 300px;width: 400px;margin: 30px;float:left;">
                     <h2>관광 안내소 위치</h2>
-                    <div class="folium-map" id="map_7df9d53ceb6243d4b572b8150e305b3d" ></div>
-                </div>
-            
-                
-                </div>
+                    <div class="folium-map" id="map_7df9d53ceb6243d4b572b8150e305b3d"></div>
+
+                </div> -->
+            </div>
+
 
             <!-- <label for="gugun">구군</label>
             <input type="text" class="form-control" name="gugun" id="gugun"
@@ -102,44 +114,75 @@ appearance: none; }
             <label for="gugun">테마</label>
             <input type="text" class="form-control" name="theme" id="theme"
                 value="{{ form.theme.value|default_if_none:'' }}"> -->
-            
+
         </form>
     </div>
+
+
+
+
 </div>
-    <div style="margin-top: 10px;">
+
+<div class="container my-3">
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="margin-top: 10px;text-align: center;font-size: large;"><strong>구별
+                    통계정보</strong></div>
+            <div class="card-text" style="margin-top: 10px;">
+                <div style="height: 400px;width:500px;margin: 10px;float:left;">
+                    <canvas id="myChart" style="height: 400px;width:500px;"></canvas>
+                </div>
+                <div style="vertical-align: middle;">
+                    <img src="/static/img/boxplot.jpg" alt='박스플롯' height="400" width="500" margin="20">
+                    <!-- alt='박스플롯' height=" 500 width="400" margin="10" -->
+                </div>
+                <!-- <div style="vertical-align: middle;">
+                <img src="https://postfiles.pstatic.net/MjAyMTA2MjVfODQg/MDAxNjI0NTgyMDA2NTgx.JrDW8UjEUxYeBXnc-l6_X0-nr97BVueRbVv5xuk6L0Ag.8rU439f6Fg1UaO2VpYul0jmK-x7h91Ocr5dc38AVg0Yg.JPEG.sonrg53/box.JPG?type=w773" alt='박스플롯' height="400" width="500" margin="20">
+            </div> -->
+            </div>
+        </div>
+    </div>
+</div>
+<!-- <div style="margin-top: 10px;">
 
 
     <div style="height: 500px;width:700px;margin: 10px;float:left;">
         <canvas id="myChart"></canvas>
     </div>
-    <div style="height: 500px;width:500px;margin: 10px;float:left;">
-        <img src="C:\miniproject\\busan_travel_info\\boxplot.jpg">
+    <div style="vertical-align: middle;">
+        <img src="/static/img/boxplot.jpg" alt='박스플롯' height="500" width="700" margin="20"> -->
+<!-- alt='박스플롯' height="500" width="400" margin="10" -->
+<!-- </div>
+</div> -->
+<!-- <div class="out" style="margin-top: 10px;">
+    <div class="in" style="align-items: center; vertical-align: middle;"> -->
+<div class='out'>
+    <div style="height: 300px;width: 400px;margin: 30px; display: inline-block;">
+        <h2>관광 안내소 위치</h2>
+        <div class="folium-map" id="map_7df9d53ceb6243d4b572b8150e305b3d"></div>
     </div>
-    
+</div>
 
+<script>
 
-    </div>
-
-
-    <script>
-
-        var ctx = document.getElementById('myChart').getContext('2d'); 
-        var chart = new Chart(ctx, {
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var chart = new Chart(ctx, {
         type: 'bar',
         data: JSON.parse('{{da|escapejs}}'),
         options: {
-          title: {
-            display: true,
-            text: 'This is title'
-          },
-          backgroundColor:'#cfcfcf',
-                scales: {
-              xAxes: [{ stacked: true }],
-              yAxes: [{ stacked: true }]
+            title: {
+                display: true,
+                text: '지역구별 통계정보'
+            },
+            backgroundColor: '#cfcfcf',
+            scales: {
+                xAxes: [{ stacked: true }],
+                yAxes: [{ stacked: true }]
             }
-        } });
-        
-        
-        </script>
+        }
+    });
+
+
+</script>
 
 {% endblock %}
